journee familiale dathletisme, correct spacing-punctuation on homepage

--- a/src/styles/partials/_icons.scss
+++ b/src/styles/partials/_icons.scss
@@ -41,6 +41,11 @@
   display: none;
 }
 
+.icon--carousel-featured {
+  font-size: 3em;
+  font-size: 8vw;
+}
+
 // Icon items
 
 .icon-phone:before {
